--- a/Pages/EditPages/ReturnBook.cshtml
+++ b/Pages/EditPages/ReturnBook.cshtml
@@ -8,7 +8,7 @@
     <div class="form-group">
         <label for="returndate">Return Date:</label>
         <input type="text" class="form-control" id="returndate" name="ReturnDate"
-               value="@(Model.borrowedBook.Return_Date == null ? DateOnly.FromDateTime(DateTime.Today) : Model.borrowedBook.Return_Date)" readonly>
+               value="@(Model.borrowedBook.Return_Date == null ? DateOnly.FromDateTime(DateTime.Today) : Model.borrowedBook.Return_Date)">
     </div>
     <button type="submit" class="btn btn-primary add-btn">Save</button>
     <a href="/MainPages/Book_Student" class="btn btn-danger">Cancel</a>
